<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nawazsharif4265.justjava.MainActivity"
    >
<LinearLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/text_view_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_four"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:textAllCaps="true"
        />

    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Whipped_Cream"
        android:layout_marginLeft="16dp"
        />

    <CheckBox
        android:id="@+id/whipped_chocolate_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Whipped_Chocolate_Cream"
        android:layout_marginLeft="16dp"
        />

    <TextView
        android:id="@+id/text_view_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_one"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:textAllCaps="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/buttondecre"
        android:layout_marginLeft="16dp"
        android:onClick="decrement"
        />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/quantity_text_view"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/text_view_two"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        />

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/buttonincre"
        android:layout_marginLeft="16dp"
        android:onClick="increment"
        />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_three"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_summary_text_view"
        android:text="@string/buttonone"
        android:textColor="#000000"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        />

    <Button
        android:id="@+id/buttonshow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:textColor="#000000"
        android:layout_marginLeft="16dp"
        android:onClick="submitOrder"
        />

</LinearLayout>

</ScrollView>


